# fastapi

./: .env.enc  .gitignore  .sops.yaml  data.py  dep.py  dependency.py  greet_async.py  hello.py  main.py  pu.sh  push.sh  pyproject.toml  requirements.txt  starlette_hello.py  stuff.py  test1.py  tokens.py  web.py
example/: async.py  auth.py  data.py  dependency.py  greet_async.py  hello.py  model.py  starlette_hello.py  stuff.py  test1.py  web.py
example/tags/model/: tag.py
example/tags/service/: tag.py
example/tags/web/: tag.py
examples/: async.py  data.py  greet_async.py  hello.py  model.py  web.py
examples/model/: tag.py
model/web/: tag.py
src/data/: creature.py  explorer.py  init.py  user.py
src/fake/: creature.py  explorer.py  user.py
src/service/: creature.py  explorer.py  user.py
src/test/unit/data/: test_creature.py  test_explorer.py
src/test/unit/service/: test_creature.py  test_explorer.py
src/web/: creature.py  explorer.py  user.py
test/: test.py
