[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["allseenn <allseen@live.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
